# openharvest

./: .env.example  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CNAME  Makefile  README.md  justfile  pyproject.toml  zensical.toml
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  publish.yml  release.yml  zizmor.yml
docs/: adapters.md  architecture.md  index.md  install.md  supported-portals.md
docs/examples/: airflow.md  ckan.md  datagouv.md  dlt.md  pandas.md  socrata.md
src/datasluice/: __init__.py  _version.py  client.py  exceptions.py  logging.py
src/datasluice/adapters/: __init__.py  base.py  factory.py  registry.py
src/datasluice/adapters/ckan/: __init__.py  adapter.py  errors.py  mapper.py  pagination.py
src/datasluice/adapters/custom/: __init__.py  adapter.py
src/datasluice/adapters/datagouv/: __init__.py  adapter.py  errors.py  mapper.py  pagination.py
src/datasluice/adapters/socrata/: __init__.py  adapter.py  errors.py  mapper.py  pagination.py
src/datasluice/auth/: __init__.py  api_key.py  base.py  basic.py  bearer.py  headers.py  none.py
src/datasluice/cli/: __init__.py  app.py  detect.py  download.py  inspect.py  search.py
src/datasluice/config/: __init__.py  defaults.py  settings.py
src/datasluice/discovery/: __init__.py  detector.py  fingerprints.py  portal_metadata.py
src/datasluice/domain/: __init__.py  dataset.py  license.py  organization.py  query.py  resource.py  result.py
src/datasluice/formats/: __init__.py  base.py  csv.py  geojson.py  json.py  parquet.py  xlsx.py
src/datasluice/integrations/: __init__.py  airflow.py  dlt.py  duckdb.py  pandas.py  polars.py
src/datasluice/io/: __init__.py  cache.py  checksums.py  downloader.py  local.py  storage.py
src/datasluice/transport/: __init__.py  http_client.py  pagination.py  rate_limit.py  retry.py  user_agent.py
tests/: conftest.py
tests/unit/: test_package.py
tests/unit/adapters/: test_ckan_mapper.py  test_registry.py
tests/unit/auth/: test_auth.py
tests/unit/discovery/: test_discovery.py
tests/unit/domain/: test_models.py
tests/unit/formats/: test_formats.py
tests/unit/integrations/: test_integrations.py
tests/unit/io/: test_io.py
tests/unit/transport/: test_transport.py
