[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datasluice"
version = "0.1.0"
description = "One Python interface for open-data discovery, extraction, format normalization, and pipeline integration"
readme = "README.md"
authors = [
  {name = "Nitish Raj", email = "contact@rajnitish.com"}
]
maintainers = [
  {name = "Nitish Raj", email = "contact@rajnitish.com"}
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]
license = {text = "MIT"}
dependencies = [
  "typer",
  "rich",
]
requires-python = ">= 3.12"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "typecheck" },
    "pre-commit",
]
lint = [
    "ruff",
]
test = [
    "coverage",
    "pytest",
]
typecheck = [
    "ty",
]
docs = [
    "zensical",
    "mkdocstrings-python",
]

[project.optional-dependencies]
pandas = ["pandas"]
polars = ["polars"]
dlt = ["dlt"]
duckdb = ["duckdb"]
airflow = ["apache-airflow"]
parquet = ["pyarrow"]
xlsx = ["openpyxl"]
all = [
    "pandas",
    "polars",
    "dlt",
    "duckdb",
    "apache-airflow",
    "pyarrow",
    "openpyxl",
]

[project.urls]
bugs = "https://github.com/nitish-raj/datasluice/issues"
changelog = "https://github.com/nitish-raj/datasluice/releases"
documentation = "https://nitish-raj.github.io/datasluice/"
homepage = "https://github.com/nitish-raj/datasluice"

[project.scripts]
datasluice = "datasluice.cli.app:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.coverage.run]
branch = true
parallel = true
source = ["src/", "tests/"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 50
exclude_also = [
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@overload",
    "@typing.overload",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = true
default-groups = ["dev"]
